# valence

./: .pre-commit-config.yaml  LICENSE  README.md  ci_config.json  pyproject.toml
docs/: AGENTIC_TESTING.md  BEGINNER_GUIDE.md  DOCUMENTATION.md  LLM_JUDGE_SUMMARY.md  LLM_PROVIDERS.md
packs/: advanced.yaml  llm_judge.yaml  math.yaml  safety.yaml
tests/: __init__.py  test_detectors.py  test_evalrun.py  test_model.py  test_mutate.py  test_packs.py  test_report.py
valence/: __init__.py  ci.py  cli.py  detectors.py  evalrun.py  metamorphic.py  model.py  mutate.py  packs.py  report.py  schema.py  storage.py  util.py  validators.py
